[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/Player/TongueTip.gd" type="Script" id=1]
[ext_resource path="res://graphics/new_graphics/tongue_circle.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=6]
radius = 219.047

[node name="TongueGrapplePoint" type="Sprite"]
position = Vector2( -317, 33 )
scale = Vector2( 0.092, 0.092 )
z_index = 1
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 6 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
